# baseball-dash

./: ,dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  build.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
data/cache/: statcast_2025-03-01_2025-10-30.parquet  statcast_2025-04-01_2025-04-15.parquet  statcast_2025-04-01_2025-10-30.parquet  statcast_2025-10-23_2025-10-30.parquet
src/: data.py  featurize.py  model.py  plots.py  tags.py  utils.py
src/pitchxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
